# okcupid

./: .gitignore  LICENSE  README.md  pyproject.toml  vscode wsl.cmd.lnk  vscode-wsl.cmd
My Solution/cfg/: Codeacademy.css
Sample Solution/sample b/: date-a-scientist.ipynb
assets/links/: Data Scientist Final.URL  OKCupid Date-A-Scientist Codecademy.URL  OkCupid Date-A-Scientist.URL
cfg/css/: Codeacademy.css
cfg/data/: educational_attainment.yaml  educational_field.yaml  educational_pursuit.yaml  ethnicities.yaml  states.yaml
cfg/mpl/: barplots.mplstyle  default.mplstyle  heatmap.mplstyle  histplots.mplstyle  stacked_barplots.mplstyle
cfg/pandas/: default.yaml  format.yaml
cfg/pd/: default.yaml
ntb/: OkCupid.ipynb
ntb/solutions/: Kaggle Forest Cover Type Prediction-checkpoint.ipynb  biodiversity-checkpoint.ipynb  date-a-scientist-checkpoint.ipynb
src/okc/: __init__.py  build_features.py  build_model.py  build_visualizations.py  create_dictionaries.py  define_units.py  display_data.py  evaluate_model.py  fit_pipelines.py  functions.py  load_config.py  load_data.py  process_data.py  utils.py  visualization.py  visualizations.py
src/okc/colors/: colors.py
src/okc/fe/: __init__.py  fe.py
src/okc/features/: __init__.py  (+1 more)
src/okc/pd/: fmt.py  (+3 more)
styles/: barplots.mplstyle  countplots_h.mplstyle  countplots_v.mplstyle  default.mplstyle  default_plot.mplstyle  hbar.mplstyle  heatmap.mplstyle  histplot_h.mplstyle  histplot_v.mplstyle  histplots_h.mplstyle  histplots_v.mplstyle  inverted.mplstyle  night_mode.mplstyle  pairplot.mplstyle  vertical_grid.mplstyle
(+45 files in other folders)
