[tool.poetry]
name = "ok-cupid"
version = "0.1.0"
description = ""
authors = ["Tim Vlek"]
license = "MIT"
packages = [
    { include = "okc", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=2.4.2,<3.0.0"
pandas = ">=3.0.0,<4.0.0"
matplotlib = ">=3.10.8,<4.0.0"
scipy = ">=1.15.0,<2.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.8.0,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
deprecation = ">=2.1.0,<3.0.0"
jinja2 = ">=3.1.5,<4.0.0"

[tool.poetry.group.dev.dependencies]
ipython = ">=9.10.0,<10.0.0"
ipykernel = ">=7.2.0,<8.0.0"
notebook = ">=7.5.3,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"